[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scenes/Mobs/Effect/Sphere.gd" type="Script" id=1]
[ext_resource path="res://Scenes/Mobs/Projectile/Nova.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 49.7772

[node name="Nova" type="KinematicBody2D"]
collision_layer = 8
collision_mask = 0
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}
SPEED = 90

[node name="Sphere" type="Node2D" parent="."]
script = ExtResource( 1 )
SIZE = 25
OUTLINE_COLOR = Color( 1, 0, 0, 1 )

[node name="Hitbox" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="AttackTimer" type="Timer" parent="."]

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
rect = Rect2( -50, -50, 100, 100 )

[connection signal="timeout" from="AttackTimer" to="." method="_on_AttackTimer_timeout"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
